[package]
name = "apl-payment-manager"
version = "0.0.1"
description = "apl payment manager"
edition = "2021"
keywords = ["solana", "apl", "payment-manager"]

[lib]
crate-type = ["cdylib", "lib"]
name = "apl_payment_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
spl-associated-token-account = "1.0.3"
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
solana-program = "1.9.28"

[dev-dependencies]
proptest = { version = "1.0" }