[package]
name = "apl-reward-distributor"
version = "0.0.1"
description = "apl reward distributor"
edition = "2021"
keywords = ["solana", "apl", "stake", "pool"]

[lib]
crate-type = ["cdylib", "lib"]
name = "apl_reward_distributor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "1.8.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
apl-stake-pool = { version = "0.0.1", path = "../apl-stake-pool", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }
