[package]
name = "apl-stake-pool"
version = "0.0.1"
description = "apl stake pool"
edition = "2021"
keywords = ["solana", "apl", "stake", "pool"]

[lib]
crate-type = ["cdylib", "lib"]
name = "apl_stake_pool"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "1.8.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
cardinal-token-manager = { version = "^1.7.4", features = ["cpi"] }
apl-payment-manager = { version = "0.0.1", path = "../apl-payment-manager", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }
